--- a/codes/spring/spring-project/src/main/resources/application.properties
+++ b/codes/spring/spring-project/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.application.name=spring-project
 
 server.port=8084
+
+spring.datasource.url=jdbc:mysql://localhost:3307/database_java
+spring.datasource.username=root
+spring.datasource.password=2004
+
+spring.jpa.hibernate.ddl-auto=update
