--- a/codes/spring/spring-project/src/main/resources/application.properties
+++ b/codes/spring/spring-project/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.username=root
 spring.datasource.password=2004
 
 spring.jpa.hibernate.ddl-auto=update
+
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
