--- a/codes/spring/spring-java-project/src/main/resources/application.properties
+++ b/codes/spring/spring-java-project/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.application.name=spring-java-project
 
 server.port=8084
+
+spring.datasource.url=jdbc:mysql://localhost:3307/test
+spring.datasource.username=root
+spring.datasource.password=2004
+
+spring.jpa.hibernate.ddl-auto=update
