--- a/codes/javase/JavaSe/.classpath
+++ b/codes/javase/JavaSe/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="src" path="src2"/>
 	<classpathentry kind="src" path="src3"/>
 	<classpathentry kind="src" path="src4"/>
+	<classpathentry kind="src" path="src5"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
