--- a/codes/javase/JavaSe/.classpath
+++ b/codes/javase/JavaSe/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="src" path="src3"/>
 	<classpathentry kind="src" path="src4"/>
 	<classpathentry kind="src" path="src5"/>
+	<classpathentry kind="src" path="src6"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
