--- a/codes/javase/JavaSe/bin/.gitignore
+++ b/codes/javase/JavaSe/bin/.gitignore
@@ -1,1 +1,13 @@
+/demo/
+/fuzzy/
 /main/
+/oop/
+/oop2/
+/oopPractice/
+/oop_demo/
+/oop_polimorfizm/
+/oop_test/
+/package_1/
+/polimorfizm/
+/task/
+/test/
