--- a/codes/javase/JavaSe/.classpath
+++ b/codes/javase/JavaSe/.classpath
@@ -11,5 +11,6 @@
 	<classpathentry kind="src" path="src4"/>
 	<classpathentry kind="src" path="src5"/>
 	<classpathentry kind="src" path="src6"/>
+	<classpathentry kind="src" path="src7"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
