--- a/codes/javase/JavaSe/bin/.gitignore
+++ b/codes/javase/JavaSe/bin/.gitignore
@@ -1,6 +1,16 @@
+/main3/
+/demo/
 /fuzzy/
 /main/
 /main2/
+/oop/
+/oop2/
+/oopPractice/
+/oop_demo/
+/oop_polimorfizm/
+/oop_test/
 /package_1/
+/polimorfizm/
+/task/
 /test/
 /test2/
