--- a/codes/javase/JavaSe/.classpath
+++ b/codes/javase/JavaSe/.classpath
@@ -7,6 +7,7 @@
 	<classpathentry kind="src" path="src5"/>
 	<classpathentry kind="src" path="src6"/>
 	<classpathentry kind="src" path="src7"/>
+	<classpathentry kind="src" path="src8"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk-21">
 		<attributes>
 			<attribute name="module" value="true"/>
